compile for paper 1.20.6